--- a/CS-UrlRedirect-Pages/Pages/Shared/_Layout.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewData["Title"] - CS_UrlRedirect_Pages</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery.unobtrusive-ajax/jquery.unobtrusive-ajax.min.js"></script>
 </head>
 <body>
     <header>
