--- a/CS-UrlRedirect-Pages/Pages/Index.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Index.cshtml
@@ -5,6 +5,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h4>Add Redirect</h4>
+    <div class="row" style="justify-content: center">
+        <div id="redirect-form-container" class="col-md-4">
+            <partial name="_RedirectForm" model="Model?.redirect">
+        </div>
+    </div>
+
+    <div style="margin: auto">
+        <partial name="_RedirectsTable" model="Model?.redirects">
+    </div>
 </div>
