--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CS_UrlRedirect.Models.Redirect>
+﻿@using CS_UrlRedirect_Pages; 
+@model IEnumerable<Models.Redirect>
 
 <table class="table">
     <thead>
@@ -37,17 +38,9 @@
                         @Html.DisplayFor(modelItem => item.NumVisits)
                     </td>
                     <td>
-                        @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-
-                        @*<a asp-action="Edit" asp-route-id="@item.Id">
-                            <input type="submit" value="📝 Edit" class="btn btn-primary" />
-                        </a>*@
-
-                        <input type="submit" value="📝 Edit" class="cancel btn btn-primary" 
+                        @*<input type="submit" value="📝 Edit" class="cancel btn btn-primary" 
                             onclick="location.href='@Url.Action(nameof(CS_UrlRedirect.Controllers.HomeController.Edit), new { id = item.Id })'"       
-                        />
+                        />*@
 
                         <form asp-action="Delete" style="display: inline-block;">
                             <input type="hidden" asp-for="@item.Id" id="delete-table-item-@item.Id" />
