--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
@@ -3,10 +3,10 @@
 @*
     data-ajax-confirm="Are you sure you want to do this?"
 *@
-<form asp-page="/"
+<form asp-page="/" asp-page-handler="Create"
       data-ajax="true" data-ajax-success="onSuccess" data-ajax-failure="onFailure"
       data-ajax-complete="onComplete"
-      data-ajax-url="/"
+      data-ajax-url="@Url.Page("Index", "Create")"
     >
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input asp-for="action" type="hidden" />
@@ -25,7 +25,7 @@
         @if (Model.action == Models.RedirectViewModel.Action.Update)
         {
             <input type="submit" value="❌ Cancel" formnovalidate class="cancel btn btn-secondary" 
-                onclick="location.href='@Url.Page("/")'"       
+                onclick="location.href='@Url.Page("Index")'"       
             />
         }
         <input type="submit" value="@(Model.action == Models.RedirectViewModel.Action.Create ?
