--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
@@ -36,35 +36,41 @@
 
 <script>
     var formValidation = formValidation || {};
-    formValidation.$formContainer = $('#redirect-form-container');
-
-    formValidation.onSuccess = function(result) {
-        //alert('success');
-
-        if (result.redirectTo) {
-            // The operation was a success on the server as it returned
-            // a JSON object with an url property pointing to the location
-            // you would like to redirect to => now use the window.location.href
-            // property to redirect the client to this location
-            //alert('Redirecting');
-            window.location.href = result.redirectTo;
-        } else {
-            // The server returned a partial view => let's refresh
-            // the corresponding section of our DOM with it
-            //alert('Reloading');
-            //console.log(result);
-            formValidation.$formContainer.html(result);
+    (function (ns) {
+        if (ns.init) {
+            return;
         }
-    }
-    formValidation.onFailure = function (xhr) {
-        //alert('fail');
-        //console.log(xhr);
-    }
-    formValidation.onComplete = function(xhr) {
-        //alert('complete');
-        //console.log(xhr);
-        //formValidation.$formContainer.html(xhr.responseText);
-    };
+        ns.$container = $('#redirect-form-container');
+
+        ns.onSuccess = function (result) {
+            //alert('success');
+
+            if (result.redirectTo) {
+                // The operation was a success on the server as it returned
+                // a JSON object with an url property pointing to the location
+                // you would like to redirect to => now use the window.location.href
+                // property to redirect the client to this location
+                //alert('Redirecting');
+                window.location.href = result.redirectTo;
+            } else {
+                // The server returned a partial view => let's refresh
+                // the corresponding section of our DOM with it
+                //alert('Reloading');
+                //console.log(result);
+                ns.$container.html(result);
+            }
+        }
+        ns.onFailure = function (xhr) {
+            //alert('fail');
+            //console.log(xhr);
+        }
+        ns.onComplete = function (xhr) {
+            //alert('complete');
+            //console.log(xhr);
+            //ns.$container.html(xhr.responseText);
+        };
+        ns.init = true;
+    })(formValidation);
 </script>
 
 @section Scripts {
