Delete functionality working

--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
@@ -3,7 +3,7 @@
 @*
     data-ajax-confirm="Are you sure you want to do this?"
 *@
-<form asp-page="/" asp-page-handler="Create"
+<form asp-page="Index" asp-page-handler="Create"
       data-ajax="true" data-ajax-success="formValidation.onSuccess" data-ajax-failure="formValidation.onFailure"
       data-ajax-complete="formValidation.onComplete"
       data-ajax-url="@Url.Page("Index", "Create")"
