Working on redirect

--- a/CS-UrlRedirect-Pages/Pages/Index.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@page "{handler?}/{id?}"
+﻿@*@page "{handler?}/{id?}"*@
+@page "{code?}"
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
