--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
@@ -41,7 +41,7 @@
                         <input type="submit" value="📝 Edit" class="cancel btn btn-primary"
                                onclick="location.href='@Url.Page("Index", "Edit",  new { id = item.Id })'" />
 
-                        <form asp-page="Index" asp-page-handler="Delete" style="display: inline-block;">
+                        <form asp-page="Delete" style="display: inline-block;">
                             <input type="hidden" name="@nameof(item.Id)" value="@item.Id" id="delete-table-item-@item.Id" />
                             <input type="submit" value="🗑️ Delete" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete code \'@item.ShortCode\'?')" />
                         </form>
