--- a/CS-UrlRedirect-Pages/Pages/Update.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Update.cshtml
@@ -1,8 +1,6 @@
-﻿@*@page "{handler?}/{id?}"*@
-@page "{code?}"
-@model IndexModel
+﻿@page "{id}"
+@model CS_UrlRedirect_Pages.Pages.UpdateModel
 @{
-    ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
