--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
@@ -1,6 +1,12 @@
 ﻿@using CS_UrlRedirect_Pages;
 @model IEnumerable<Models.Redirect>
 
+@{
+    var routeUrl = Url.RouteUrl(ViewContext.RouteData.Values);
+    var qsPath = ViewContext.HttpContext.Request.QueryString.Value;
+    var currentUrl = $"{routeUrl}{qsPath}";
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -38,11 +44,14 @@
                         @Html.DisplayFor(modelItem => item.NumVisits)
                     </td>
                     <td>
-                        <input type="submit" value="📝 Edit" class="cancel btn btn-primary"
-                               onclick="location.href='@Url.Page("Index", "Edit",  new { id = item.Id })'" />
+                        <input type="submit" value="📝 Update" class="cancel btn btn-primary"
+                               onclick="location.href='@Url.Page("Update",  new { id = item.Id })'" />
 
                         <form asp-page="Delete" style="display: inline-block;">
-                            <input type="hidden" name="@nameof(item.Id)" value="@item.Id" id="delete-table-item-@item.Id" />
+                            <input type="hidden" name="@nameof(item.Id)" value="@item.Id" />
+                            @if (!currentUrl.EndsWith($"/{item.Id}") && !currentUrl.Contains($"/{item.Id}/")) { 
+                                <input type="hidden" name="redirect" value="@currentUrl" />
+                            }
                             <input type="submit" value="🗑️ Delete" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete code \'@item.ShortCode\'?')" />
                         </form>
                     </td>
