Changed updated back to edit

--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectForm.cshtml
@@ -40,11 +40,12 @@
 
 <script>
     var formValidation = formValidation || {};
+    let parentContainerSelector = '#redirect-form-container';
     (function (ns) {
         if (ns.init) {
             return;
         }
-        ns.$container = $('#redirect-form-container');
+        ns.$container = $(parentContainerSelector);
 
         ns.onSuccess = function (result) {
             //alert('success');
