--- a/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Shared/_RedirectsTable.cshtml
@@ -44,7 +44,7 @@
                         @Html.DisplayFor(modelItem => item.NumVisits)
                     </td>
                     <td>
-                        <input type="submit" value="📝 Update" class="cancel btn btn-primary"
+                        <input type="submit" value="📝 Edit" class="cancel btn btn-primary"
                                onclick="location.href='@Url.Page("Update",  new { id = item.Id })'" />
 
                         <form asp-page="Delete" style="display: inline-block;">
