--- a/CS-UrlRedirect-Pages/Pages/Update.cshtml
+++ b/CS-UrlRedirect-Pages/Pages/Update.cshtml
@@ -7,11 +7,11 @@
 
     <div class="row" style="justify-content: center">
         <div id="redirect-form-container" class="col-md-4">
-            <partial name="_RedirectForm" model="Model?.redirect">
+            <partial name="_RedirectForm" model="Model?.redirectVM">
         </div>
     </div>
 
     <div style="margin: auto">
-        <partial name="_RedirectsTable" model="Model?.redirects">
+        <partial name="_RedirectsTable" model="Model?.redirectsTableVM">
     </div>
 </div>
